--- a/scripts/style.css
+++ b/scripts/style.css
@@ -33,6 +33,8 @@ body {
   height:30px;
   width:100%;
   padding-bottom: .2%;
+  opacity: 1;
+  transition: opacity .5s ease;
 }
 
 #div2 {
@@ -188,7 +190,8 @@ p6 {
   cursor: pointer;
   padding: 0;
   margin: 0;
-  transition: transform 0.3s ease, filter 0.5s ease;
+  transition: transform 0.3s ease, filter 0.5s ease, opacity .5s ease;;
+  opacity: 1;
 }
 
 .nav-button:hover {
@@ -222,6 +225,7 @@ p6 {
 }
 
 .textarea {
+  line-height: 1.3;
   top: 50%;
   left: 50%;
   position: absolute;
@@ -300,8 +304,11 @@ textarea[readonly]::placeholder {
 
 .grey {
   color: #a167ff;
+  font-size: 22px;
   text-shadow: -2px 2px hsla(0, 0%, 38%, 0.6);
-  transform: translate(0%, -200%);
+  top: 50%;
+  left: 50%;
+  transform: translate(0%, -175%);
 }
 
 .div-content {
